--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,96 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: red;
+}
+
+/* APP */
+#app{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #16161a;
+}
+
+/* TITLE */
+h1{
+    margin-bottom: 20px;
+    font-family: 'Bangers', cursive;;
+    font-size: calc(3vw + 3px);
+    color: #fffffe;
+}
+
+/* SLIDER */
+.slider{
+    position: relative;
+    width: 800px;
+    height: 400px;
+    border: 8px solid #2cb67d;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* TASTI PREV E NEXT */
+.next,
+.prev{
+    position: absolute;
+    color: #7f5af0;
+    font-size: calc(1.8vw + 1.8px);
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    transition: transform .3s, color .3s;
+}
+
+.next:hover,
+.prev:hover{
+    transform: translateY(-50%) scale(1.3);
+    color: #94a1b2;
+}
+
+.next{
+    left: 102%;
+}
+
+.prev{
+    right: 102%;
+}
+
+/* SELECTOR */
+.selector{
+    display:flex;
+    justify-content: space-around;
+    width: 40%;
+    position: absolute;
+    top: 105%;
+    left: 50%;
+    padding: 15px 30px;
+    background-color: #7f5af0;
+    border-radius: 30px;
+    transform: translateX(-50%);
+}
+
+.selector i{
+    color: #fffffe;
+    font-size: calc(1.2vw + 1.2px);
+    cursor: pointer;
+    transition: transform .3s, color .3s;
+}
+
+.selector i:hover{
+    transform: scale(1.3);
+    color: #94a1b2;
+}
+
+.selector i.active{
+    color: #2cb67d;
+}
+
+.selector i.active:hover{
+    transform: none;
 }
